ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # Use "nginx" for NGINX Ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api/       # Route to the backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /           # Route to the frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
